# Transformer-based-Translation-Model

./: README.md  config.py  dataset.py  inference.ipynb  pyproject.toml  train.py
